modules/ec2_instances/resource_security_group.tf
# select security group
resource "aws_security_group" "sg_tf_devops" {
  name   = var.security_group_name
  vpc_id = data.aws_vpc.devops.id
  // Incoming traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Outgoing traffic, instance that have this sg attached will be able to egress everywhere.
  // protocol = -1   eq all protocols
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
